# sherby-pace-2024

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  cutwidth_public_exec.sh  data.json  exact_public_exec.sh  maxsattester.py
cutwidth-public/: 1.gr  1.sol  10.sol  100.sol  101.sol  102.sol  103.sol  104.sol  105.sol  106.sol  107.sol  108.sol  109.sol  11.sol  110.sol  111.sol  112.sol  113.sol  114.sol  115.sol  116.sol  117.sol  118.sol  119.sol  12.sol  120.sol  121.sol  124.sol  125.sol  13.sol  14.sol  15.sol  16.sol  17.sol  18.sol  19.sol  2.sol  20.sol  21.sol  22.sol  (+85 more)
dfas_v2/: CMakeLists.txt  Util.h  isdag.py  main.cpp  scc1.gr  scc1.info  scc1.out.gr  scc1.wcnf  scc_large.gr  scc_mid.gr  test.gr  test2.gr
dfas_v2/EvalMaxSAT/lib/EvalMaxSAT/src/: EvalMaxSAT.h
latex/: scc_recomputation.tex
latex/tikz_figures/: sub_instance.tex
src/: lib.rs  main.rs
tests/: check_tiny_examples.rs  custom1.gr  custom2.dot  custom2.gr  custom2.sol  custom3.gr  twin.gr  twin2.gr  twin_test.rs
tests/motif_test_instances/: high_edges_test.gr  high_edges_test.sol  high_edges_test.true_sol  high_stars_test.gr  high_stars_test.sol  high_stars_test.true_sol  low_edges_test.gr  low_edges_test.sol  low_edges_test.true_sol  low_edges_tiny_test.gr  low_edges_tiny_test.sol  low_edges_tiny_test.true_sol  low_stars_test.gr  low_stars_test.sol  low_stars_tiny_test.gr  low_stars_tiny_test.sol  low_stars_tiny_test.true_sol  med_edges_test.gr  med_edges_test.sol  med_edges_test.true_sol  med_stars_test.gr  med_stars_test.sol  med_stars_test.true_sol
tests/tiny_test_set/: cycle_8_shuffled.sol  grid_9_shuffled.sol
tiny_test_set/: complete_4_5.sol  ladder_4_4_shuffled.sol  plane_5_6.sol  star_6.sol  tree_6_10.sol  website_20.sol
tmpml/: readme
